--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@remix-run/react": "^1.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remix": "^1.1.1",
     "@remix-run/express": "^1.1.1",
+    "@remix-run/react": "^1.1.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "moment": "^2.29.1",
+    "morgan": "^1.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remix": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
