--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@prisma/client": "^3.7.0",
     "@remix-run/express": "^1.1.1",
     "@remix-run/react": "^1.1.1",
+    "@storybook/addons": "^6.4.9",
+    "@storybook/theming": "^6.4.9",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
@@ -31,11 +34,14 @@
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/react": "^6.4.9",
+    "@types/node": "^17.0.5",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.3",
     "prettier": "2.5.1",
-    "typescript": "^4.1.2"
+    "prisma": "^3.7.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": ">=14"
